tests/paczka1/small_fuzzy/30300156.err
Error in line 2: A249 A964 3,86
Error in line 6: A249 A964 96,2
Error in line 3: y3Gvl4Af A249 52,7
Error in line 12: Sw1ClMTZ6rC S65 45,6
Error in line 1: 2YZFV S767 82,9
Error in line 13: Sw1ClMTZ6rC A249 831,4
